Dataset/pinch_zoom/ankidroid_Anki-Android_17667 Tested/reactdroid_log.txt
ReActDroid Test Log
============================================================
App:              ankidroid/Anki-Android
Issue:            https://github.com/ankidroid/Anki-Android/issues/17667
Version:          2.21alpha4
Primary Gesture:  pinch_zoom
Category:         pinch_zoom
Test Result:      FAIL
Execution Time:   0.1s
============================================================

Result Reason:
  ReActDroid completed 30 steps without triggering the expected crash.

============================================================
FULL EXECUTION LOG (stdout)
============================================================
(empty)

============================================================
STDERR
============================================================
  File "/Users/darshan/Desktop/Papers/ReBL/Dataset/pinch_zoom/ankidroid_Anki-Android_17667 Tested/reactdroid_output/_reactdroid_run.py", line 35
    "crash_desc": """[BUG]: Width of "Deck options" page does not/cannot fit to screen (display). Steps: Open the app Long press a deck Tap "Deck options"""",
                                                                                                                                                              ^
SyntaxError: EOL while scanning string literal

